--- a/src/app/pagine/home/home.component.html
+++ b/src/app/pagine/home/home.component.html
@@ -5,24 +5,32 @@
 </div>
 
 <section class="sectionButton">
+
   <div class="d-flex justify-content-center">
-    <div class="contBott">
-      <button class="buttonHome">
-        <i class="fa-solid fa-folder-open"></i>Archivio
-      </button>
-      <button class="buttonHome">
-        <i class="fa-solid fa-sack-dollar"></i>Vendita
-      </button>
-    </div>
-    <div class="contBott">
-      <button class="buttonHome">
-        <i class="fa-solid fa-clipboard"></i>Prima nota
-      </button>
-      <button class="buttonHome">
-        <i class="fa-solid fa-box"></i>Carico merci
-      </button>
+
+    <div class="row">
+      <div class="col">
+        <button class="buttonPers">
+          <i class="fa-solid fa-folder-open"></i>Archivio
+        </button>
+        <button class="buttonPers" routerLink="/vendita">
+          <i class="fa-solid fa-sack-dollar"></i>Vendita
+        </button>
+      </div>
+
+      <div class="col">
+
+        <button class="buttonPers">
+          <i class="fa-solid fa-clipboard"></i>Prima nota
+        </button>
+        <button class="buttonPers">
+          <i class="fa-solid fa-box"></i>Carico merci
+        </button>
+      </div>
+      
     </div>
   </div>
+
 </section>
 
 <!-- Footer -->
