--- a/src/app/pagine/vendita/vendita/vendita.component.html
+++ b/src/app/pagine/vendita/vendita/vendita.component.html
@@ -1,32 +1,33 @@
 <div class="intest">
-  <div class="d-flex justify-content-center">
+  <!-- Contenitore Flex per titolo e testo -->
+  <div class="flex-container">
     <h1 class="titolo">VENDITA</h1>
+    <div class="text-right" routerLink="/home"><i class="fa-solid fa-door-open"></i></div>
   </div>
 </div>
 
 
-<section>
-<div class="row">
-  <div class="col">
-    <button class="buttonPers">1</button>
-    <button class="buttonPers">1</button>
-    <button class="buttonPers">1</button>
+<section class="d-flex justify-content-center sectionButton">
+
+  <div class="row ">
+    <div class="col">
+      <button class="buttonPers">Fattura immediata</button>
+      <button class="buttonPers">Fattura differita</button>
+      <button class="buttonPers">Doc. di trasporto</button>
+    </div>
+
+    <div class="col">
+      <button class="buttonPers">Ricevuta fiscale</button>
+      <button class="buttonPers">Vendita al banco</button>
+      <button class="buttonPers" routerLink="/touchscreen">Touch screen</button>
+    </div>
+
+    <div class="col">
+      <button class="buttonPers">Preventivo</button>
+      <button class="buttonPers">Conferma d'ordine</button>
+      <button class="buttonPers">Nota accredito</button>
+    </div>
   </div>
-
-  <div class="col">
-    <button class="buttonPers">1</button>
-    <button class="buttonPers">1</button>
-    <button class="buttonPers">1</button>
-  </div>
-
-  <div class="col">
-    <button class="buttonPers">1</button>
-    <button class="buttonPers">1</button>
-    <button class="buttonPers">1</button>
-  </div>
-
-</div>
-
 </section>
 
 
