--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="footer">
   <div class="footer-content">
-    <p>&copy; 2024 Cassa Bar. Tutti i diritti riservati.</p>
+    &copy; 2024 Cassa Bar. Tutti i diritti riservati.
     <div class="footer-links">
       <a href="#">Termini e Condizioni</a>
       <a href="#">Contattaci</a>
