--- a/src/app/pagine/home/home.component.html
+++ b/src/app/pagine/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="intest">
   <div class="d-flex justify-content-center">
-    <h1 class="titolo">CASSA</h1>
+    <div class="titolo">CASSA</div>
   </div>
 </div>
 
@@ -27,7 +27,7 @@
           <i class="fa-solid fa-box"></i>Carico merci
         </button>
       </div>
-      
+
     </div>
   </div>
 
