--- a/src/app/pagine/vendita/vendita/vendita.component.css
+++ b/src/app/pagine/vendita/vendita/vendita.component.css
@@ -19,9 +19,10 @@
 .titolo {
   color: white;
   font-weight: bolder;
-  font-size: 4vw;
+  font-size: 2vw;
   text-align: center;
   flex: 1; /* Permette di espandere per riempire lo spazio disponibile */
+  margin-left: 1vw;
 }
 
 /* Stile per il testo all'estrema destra */
@@ -37,7 +38,7 @@
 }
 
 .fa-solid {
-  font-size: 2.4vw;
+  font-size: 2vw;
   margin-right: 1vw;
   cursor:pointer;
 }
