--- a/src/app/pagine/vendita/vendita/vendita.component.html
+++ b/src/app/pagine/vendita/vendita/vendita.component.html
@@ -1,7 +1,9 @@
 <div class="intest">
   <!-- Contenitore Flex per titolo e testo -->
   <div class="flex-container">
-    <h1 class="titolo">VENDITA</h1>
+
+    <div class="titolo">VENDITA</div>
+
     <div class="text-right" routerLink="/home"><i class="fa-solid fa-door-open"></i></div>
   </div>
 </div>
