--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -1,4 +1,3 @@
-/* Stili generali (desktop) */
 .intest {
   background-color: #EF8000;
   width: 100%;
@@ -7,5 +6,17 @@
 .titolo {
   color: white;
   font-weight: bolder;
-  font-size: 4vw;
+  font-size: 2vw;
+}
+
+.sezione1{
+}
+
+.contInput{
+  padding: 1vw;
+}
+
+.form-control{
+  width: 150px;
+  border: solid 1px black;
 }
