--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -1,9 +1,17 @@
 <div class="intest">
   <div class="d-flex justify-content-center">
-    <h1 class="titolo">TOUCH-SCREEN</h1>
+    <div class="titolo">TOUCH-SCREEN</div>
   </div>
 </div>
 
+<!--1-->
+<section class="sezione1">
+
+  <div class="contInput">
+    <input class="form-control">
+  </div>
+
+</section>
 
 
 
