--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,10 +2,10 @@
 <footer class="footer">
   <div class="footer-content">
     &copy; 2024 Cassa Bar. Tutti i diritti riservati.
-    <div class="footer-links">
+    <!-- <div class="footer-links">
       <a href="#">Termini e Condizioni</a>
       <a href="#">Contattaci</a>
       <a href="#">Privacy</a>
-    </div>
+    </div> -->
   </div>
 </footer>
