--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -7,22 +7,28 @@
 <!--1-->
 <section class="sezione1">
   <div class="contInput">
-    <input class="form-control" value="Numero" readonly>
+    <input class="form-control myForm" value="Numero" readonly>
     <span class="spazio"></span>
-    <input class="form-control" type="number" value="1">
+    <input class="form-control myForm" type="number" value="1">
 
     <span class="spazio"></span>
 
-    <input class="form-control" value="Data" readonly>
+    <input class="form-control myForm" value="Data" readonly>
     <span class="spazio"></span>
-    <input class="form-control formPers" type="date" [value]="currentDate">
+    <input class="form-control formPers2"  type="date" [value]="currentDate">
 
     <span class="spazio"></span>
 
-    <input class="form-control" value="Orario" readonly>
+    <input class="form-control myForm" value="Orario" readonly>
     <span class="spazio"></span>
-    <input class="form-control formPers" type="time" [value]="currentTime">
+    <input class="form-control formPers myForm" type="time" [value]="currentTime">
   </div>
+</section>
+
+
+<section class="sezioneLotteria">
+  <input class="form-control formPers2" value="Codice Lotteria" readonly>
+
 </section>
 
 <app-footer></app-footer>
