--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -15,20 +15,29 @@
 
     <input class="form-control myForm" value="Data" readonly>
     <span class="spazio"></span>
-    <input class="form-control formPers2"  type="date" [value]="currentDate">
+    <input class="form-control formPers2" type="date" [value]="currentDate">
 
     <span class="spazio"></span>
 
     <input class="form-control myForm" value="Orario" readonly>
     <span class="spazio"></span>
     <input class="form-control formPers myForm" type="time" [value]="currentTime">
+
+    <div class="contInput2 ">
+      <input class="form-control formPers2" value="Codice Lotteria" readonly>
+      <span class="spazio"></span>
+      <input class="form-control myForm" type="number" value="1">
+      <div class="bordoX">
+      <i class="fa-solid fa-x"></i>
+    </div>
+    </div>
+
   </div>
+
+
 </section>
 
 
-<section class="sezioneLotteria">
-  <input class="form-control formPers2" value="Codice Lotteria" readonly>
 
-</section>
 
 <app-footer></app-footer>
