--- a/src/app/pagine/vendita/vendita/vendita.component.css
+++ b/src/app/pagine/vendita/vendita/vendita.component.css
@@ -58,10 +58,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.1s, box-shadow 0.1s;
 }
 
 .buttonPers:active {
   transform: scale(0.95);
-  box-shadow: 0 2px #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   background-color: #D97000;
 }
+
