--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -26,7 +26,7 @@
     <div class="contInput2 ">
       <input class="form-control formPers2" value="Codice Lotteria" readonly>
       <span class="spazio"></span>
-      <input class="form-control myForm" type="number" value="1">
+      <input class="form-control myForm" type="number" value="1" id="inputCodice">
       <div class="bordoX">
       <i class="fa-solid fa-x"></i>
     </div>
