--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -26,9 +26,9 @@
     <div class="contInput2 ">
       <input class="form-control formPers2" value="Codice Lotteria" readonly>
       <span class="spazio"></span>
-      <input class="form-control myForm" type="number" value="1" id="inputCodice">
-      <div class="bordoX">
-      <i class="fa-solid fa-x"></i>
+      <input class="form-control myForm" type="text" id="inputCodice">
+      <div class="bordoX" >
+      <i class="fa-solid fa-x" (click)="resetInput()"></i>
     </div>
     </div>
 
