--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -68,3 +68,80 @@
   font-weight: bold;
 
 }
+
+.layout-container {
+  display: flex;
+  margin-top: 20px;
+}
+
+.sidebar {
+  width: 20%;
+  max-height: 400px; /* Imposta l'altezza massima della sidebar */
+  overflow-y: auto; /* Aggiungi lo scroll verticale */
+  padding: 10px;
+  background-color: #f2f2f2;
+  border-right: 2px solid #ddd;
+}
+
+.sidebar h3 {
+  margin-bottom: 15px;
+  font-size: 1.5em;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar li {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  border-bottom: 1px solid #ddd;
+}
+
+.sidebar li.active,
+.sidebar li:hover {
+  background-color: #ef8000;
+  color: white;
+}
+
+.grid {
+  flex: 1;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.header-row {
+  display: flex;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.header-cell {
+  flex: 1;
+  text-align: center;
+  border-bottom: 2px solid #ddd;
+  padding: 5px;
+}
+
+.grid-content {
+  display: flex;
+}
+
+.grid-column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px; /* Spazio tra gli articoli */
+}
+
+.grid-item {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+}
