--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -73,20 +73,20 @@
 
 .layout-container {
   display: flex;
-  margin-top: 20px;
 }
 
 .sidebar {
   width: 20%;
-  max-height: 400px; /* Imposta l'altezza massima della sidebar */
+  height: 80vh; /* Imposta l'altezza massima della sidebar */
   overflow-y: auto; /* Aggiungi lo scroll verticale */
-  padding: 10px;
+  padding: 0.521vw;
   background-color: #f2f2f2;
-  border-right: 2px solid #ddd;
+  border-right: 0.104vw solid #ddd;
+
 }
 
 .sidebar h3 {
-  margin-bottom: 15px;
+  margin-bottom: 1.648vh;
   font-size: 1.5em;
 }
 
@@ -97,7 +97,7 @@
 }
 
 .sidebar li {
-  padding: 10px;
+  padding: 0.521vw;
   cursor: pointer;
   transition: background-color 0.3s;
   border-bottom: 1px solid #ddd;
@@ -111,7 +111,7 @@
 
 .grid {
   flex: 1;
-  padding: 10px;
+  padding: 0.521vw;
   display: flex;
   flex-direction: column;
 }
@@ -119,14 +119,14 @@
 .header-row {
   display: flex;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 1.099vh;
 }
 
 .header-cell {
   flex: 1;
   text-align: center;
-  border-bottom: 2px solid #ddd;
-  padding: 5px;
+  border-bottom: 0.22vh solid #ddd;
+  padding: 0.471vw;
 }
 
 .grid-content {
@@ -137,13 +137,13 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 5px; /* Spazio tra gli articoli */
+  gap: 0.471vw; /* Spazio tra gli articoli */
 }
 
 .grid-item {
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 10px;
+  border: 0.052vw solid #ddd;
+  border-radius: 0.26vw;
+  padding: 0.521vw;
   text-align: center;
 }
