--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -125,8 +125,8 @@
 .header-cell {
   flex: 1;
   text-align: center;
-  border-bottom: 0.22vh solid #ddd;
   padding: 0.471vw;
+  border:solid 0.052vw gray
 }
 
 .grid-content {
