--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -126,7 +126,8 @@
   flex: 1;
   text-align: center;
   padding: 0.471vw;
-  border:solid 0.052vw gray
+  border:solid 0.052vw gray;
+  cursor: pointer;
 }
 
 .grid-content {
