--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -38,7 +38,7 @@
 <div class="layout-container">
   <!-- Pannello delle Categorie a Sinistra -->
   <div class="sidebar">
-    <h3>Categorie</h3>
+    <!-- <h3>Categorie</h3> -->
     <ul>
       <li
         *ngFor="let categoria of categorie"
