--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -72,8 +72,10 @@
 
 .sidebar {
   width: 20%;
-  height: 80vh; /* Imposta l'altezza massima della sidebar */
-  overflow-y: auto; /* Aggiungi lo scroll verticale */
+  height: 80vh;
+  /* Imposta l'altezza massima della sidebar */
+  overflow-y: auto;
+  /* Aggiungi lo scroll verticale */
   padding: 0.521vw;
   background-color: #f2f2f2;
   border-right: 0.104vw solid #ddd;
@@ -108,19 +110,23 @@
   padding: 0.521vw;
   display: flex;
   flex-direction: column;
-  overflow-x: auto; /* Permette lo scroll orizzontale per l'intera griglia */
+  overflow-x: auto;
+  /* Permette lo scroll orizzontale per l'intera griglia */
 }
 
 .header-row {
   display: flex;
   font-weight: bold;
   margin-bottom: 1.099vh;
-  overflow-x: auto; /* Permette lo scroll orizzontale per le intestazioni */
-  white-space: nowrap; /* Impedisce agli elementi di andare a capo */
+  overflow-x: auto;
+  /* Permette lo scroll orizzontale per le intestazioni */
+  white-space: nowrap;
+  /* Impedisce agli elementi di andare a capo */
 }
 
 .header-cell {
-  flex: 1 0 auto; /* Consente alle celle di mantenere la loro larghezza e di scorrere orizzontalmente */
+  flex: 1 0 auto;
+  /* Consente alle celle di mantenere la loro larghezza e di scorrere orizzontalmente */
   text-align: center;
   padding: 0.471vw;
   border: solid 0.052vw gray;
@@ -133,25 +139,32 @@
 }
 
 .header-cell.active {
-  background-color: #EF8000; /* Colore di evidenziazione */
+  background-color: #EF8000;
+  /* Colore di evidenziazione */
   color: white;
   font-weight: bold;
 }
+
 .grid-content {
   display: flex;
-  flex-wrap: wrap; /* Permette alle colonne di andare a capo */
-  gap: 1vw; /* Spazio tra le colonne */
+  flex-wrap: wrap;
+  /* Permette alle colonne di andare a capo */
+  gap: 1vw;
+  /* Spazio tra le colonne */
   padding: 1vw;
 }
 
 .grid-column {
   display: flex;
-  flex-wrap: wrap; /* Permette agli articoli di andare a capo */
-  gap: 1vw; /* Spazio tra gli articoli */
+  flex-wrap: wrap;
+  /* Permette agli articoli di andare a capo */
+  gap: 1vw;
+  /* Spazio tra gli articoli */
 }
 
 .grid-item {
-  width: 15vw; /* Larghezza fissa per ogni articolo */
+  width: 15vw;
+  /* Larghezza fissa per ogni articolo */
   background-color: #fff;
   border: 0.052vw solid #ddd;
   border-radius: 0.26vw;
