Prezzi aggiunti al ts e all'html

--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -28,8 +28,9 @@
       <span class="spazio"></span>
       <input class="form-control myForm" type="text" id="inputCodice">
       <div class="bordoX" >
-      <i class="fa-solid fa-x" (click)="resetInput()"></i>
-    </div>
+     
+        <i class="fa-solid fa-x" (click)="resetInput()"></i>
+      </div>
     </div>
   </div>
 </section>
@@ -67,7 +68,7 @@
       <ng-container *ngIf="tipologiaSelezionata; else mostraTuttiArticoli">
         <div class="grid-column">
           <div class="grid-item" *ngFor="let articolo of articoliFiltrati[tipologiaSelezionata]">
-            {{ articolo }}
+            {{ articolo.nome }} - €{{ articolo.prezzo }}
           </div>
         </div>
       </ng-container>
@@ -76,13 +77,12 @@
       <ng-template #mostraTuttiArticoli>
         <div class="grid-column" *ngFor="let tipologia of tipologie">
           <div class="grid-item" *ngFor="let articolo of articoliFiltrati[tipologia]">
-            {{ articolo }}
+            {{ articolo.nome }} - €{{ articolo.prezzo }}
           </div>
         </div>
       </ng-template>
     </div>
   </div>
 </div>
-
 
 <app-footer></app-footer>
