inizio a fare la calcolatrice

--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -50,6 +50,14 @@
 
 
 
+  <!--CALCOLATRICE-->
+  
+
+
+
+
+
+
   <!-- Griglia Centrale -->
   <div class="grid">
     <!-- Intestazioni delle Colonne -->
