--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -111,6 +111,7 @@
   display: flex;
   flex-direction: column;
   overflow-x: auto;
+  cursor: pointer;
   /* Permette lo scroll orizzontale per l'intera griglia */
 }
 
