--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -9,7 +9,7 @@
   <div class="contInput">
     <input class="form-control myForm" value="Numero" readonly />
     <span class="spazio"></span>
-    <input class="form-control myForm" type="number" value="1" />
+    <input class="form-control myForm" type="number" [(ngModel)]="numero" />
 
     <span class="spazio"></span>
 
@@ -46,76 +46,70 @@
     </ul>
   </div>
 
-
-
   <!-- Griglia Centrale -->
-  <div class="grid">
-    <div class="header-row">
-      <div *ngFor="let tipologia of tipologie" class="header-cell" (click)="selezionaTipologia(tipologia)"
-        [class.active]="tipologia === tipologiaSelezionata">
-        {{ tipologia }}
+  <!-- Griglia Centrale -->
+<div class="grid">
+  <div class="header-row">
+    <div *ngFor="let tipologia of tipologie" class="header-cell" (click)="selezionaTipologia(tipologia)"
+      [class.active]="tipologia === tipologiaSelezionata">
+      {{ tipologia }}
+    </div>
+  </div>
+  <div class="grid-content">
+    <ng-container *ngIf="tipologiaSelezionata; else mostraTuttiArticoli">
+      <div class="grid-column">
+        <div class="grid-item" *ngFor="let articolo of articoliFiltrati[tipologiaSelezionata]" (click)="selezionaArticolo(articolo)">
+          {{ articolo.nome }} - €{{ articolo.prezzo }}
+        </div>
       </div>
-    </div>
-    <div class="grid-content">
-      <ng-container *ngIf="tipologiaSelezionata; else mostraTuttiArticoli">
-        <div class="grid-column">
-          <div class="grid-item" *ngFor="let articolo of articoliFiltrati[tipologiaSelezionata]">
-            {{ articolo.nome }} - €{{ articolo.prezzo }}
-          </div>
+    </ng-container>
+    <ng-template #mostraTuttiArticoli>
+      <div class="grid-column" *ngFor="let tipologia of tipologie">
+        <div class="grid-item" *ngFor="let articolo of articoliFiltrati[tipologia]" (click)="selezionaArticolo(articolo)">
+          {{ articolo.nome }} - €{{ articolo.prezzo }}
         </div>
-      </ng-container>
-      <ng-template #mostraTuttiArticoli>
-        <div class="grid-column" *ngFor="let tipologia of tipologie">
-          <div class="grid-item" *ngFor="let articolo of articoliFiltrati[tipologia]">
-            {{ articolo.nome }} - €{{ articolo.prezzo }}
-          </div>
-        </div>
-      </ng-template>
-    </div>
-  </div>
-
-
-
-  <!-- Sezione della Calcolatrice -->
-  <!-- Sezione della Calcolatrice -->
-<div class="calcolatrice-container">
-  <div class="display">{{ espressione || '0' }}</div>
-  <div class="buttons">
-    <button class="btn" (click)="aggiungiNumero('1')">1</button>
-    <button class="btn" (click)="aggiungiNumero('2')">2</button>
-    <button class="btn" (click)="aggiungiNumero('3')">3</button>
-    <button class="btn" (click)="aggiungiOperazione('+')">+</button>
-    <button class="btn" (click)="aggiungiNumero('4')">4</button>
-    <button class="btn" (click)="aggiungiNumero('5')">5</button>
-    <button class="btn" (click)="aggiungiNumero('6')">6</button>
-    <button class="btn" (click)="aggiungiOperazione('-')">-</button>
-    <button class="btn" (click)="aggiungiNumero('7')">7</button>
-    <button class="btn" (click)="aggiungiNumero('8')">8</button>
-    <button class="btn" (click)="aggiungiNumero('9')">9</button>
-    <button class="btn" (click)="aggiungiOperazione('*')">x</button>
-    <button class="btn" (click)="aggiungiNumero('0')">0</button>
-    <button class="btn" (click)="aggiungiOperazione('/')">/</button>
-    <button class="btn uguale" (click)="calcola()">=</button>
-    <button class="btn reset" (click)="reset()">C</button>
-    <button class="btn" (click)="aggiungiIva()">+IVA</button>
-    <button class="btn" (click)="rimuoviIva()">-IVA</button>
-    <button class="btn" (click)="applicaSconto()">Sconto%</button>
-    <button class="btn" (click)="totale()">Totale</button>
-  </div>
-
-  <div class="pagamento">
-    <label for="pagaContanti">Contanti: </label>
-    <input type="number" id="pagaContanti" placeholder="Inserisci importo" [(ngModel)]="importoPagamento">
-    <button class="btn" (click)="calcolaResto()">Calcola Resto</button>
-  </div>
-
-  <div class="resto-display">
-    Resto: <span id="resto">{{ resto || '0' }}</span>
+      </div>
+    </ng-template>
   </div>
 </div>
 
 
+  <!-- Sezione della Calcolatrice -->
+  <div class="calcolatrice-container">
+    <div class="display">{{ espressione || '0' }}</div>
+    <div class="buttons">
+      <button class="btn" (click)="aggiungiNumero('1')">1</button>
+      <button class="btn" (click)="aggiungiNumero('2')">2</button>
+      <button class="btn" (click)="aggiungiNumero('3')">3</button>
+      <button class="btn" (click)="aggiungiOperazione('+')">+</button>
+      <button class="btn" (click)="aggiungiNumero('4')">4</button>
+      <button class="btn" (click)="aggiungiNumero('5')">5</button>
+      <button class="btn" (click)="aggiungiNumero('6')">6</button>
+      <button class="btn" (click)="aggiungiOperazione('-')">-</button>
+      <button class="btn" (click)="aggiungiNumero('7')">7</button>
+      <button class="btn" (click)="aggiungiNumero('8')">8</button>
+      <button class="btn" (click)="aggiungiNumero('9')">9</button>
+      <button class="btn" (click)="aggiungiOperazione('*')">x</button>
+      <button class="btn" (click)="aggiungiNumero('0')">0</button>
+      <button class="btn" (click)="aggiungiOperazione('/')">/</button>
+      <button class="btn uguale" (click)="calcola()">=</button>
+      <button class="btn reset" (click)="reset()">C</button>
+      <button class="btn" (click)="aggiungiIva()">+IVA</button>
+      <button class="btn" (click)="rimuoviIva()">-IVA</button>
+      <button class="btn" (click)="applicaSconto()">Sconto%</button>
+      <button class="btn" (click)="totale()">Totale</button>
+    </div>
 
+    <div class="pagamento">
+      <label for="pagaContanti">Contanti: </label>
+      <input type="number" id="pagaContanti" placeholder="Inserisci importo" [(ngModel)]="importoPagamento">
+      <button class="btn" (click)="calcolaResto()">Calcola Resto</button>
+    </div>
 
-
+    <div class="resto-display">
+      Resto: <span id="resto">{{ resto || '0' }}</span>
+    </div>
+  </div>
 </div>
+
+
