--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -173,6 +173,30 @@
   text-align: center;
 }
 
+/* Limita l'altezza della griglia e abilita lo scroll verticale */
+.prodotti-scroll {
+  height: 544px;
+  width: 100%;
+  overflow-y: scroll;
+  padding: 10px;
+  overflow-x: hidden;
+  border: solid 1px black;
+}
+
+/* Stile per le carte dei prodotti */
+.articolo-card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.articolo-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.p-3 {
+  padding: 0rem !important;
+}
+
 
 /*----------------------*/
 .calcolatrice-container {
@@ -248,3 +272,5 @@
   margin-top: 1vw;
   font-size: 1.5vw;
 }
+
+
