--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -203,17 +203,21 @@
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
-  width: 500px; /* Imposta una larghezza fissa o adatta come preferisci */
-  height: 600px; /* Imposta un'altezza massima per la calcolatrice */
+  width: 600px; /* Maggiore larghezza per una visualizzazione più ampia */
+  height: 700px; /* Altezza fissa per l'intera calcolatrice */
+  display: flex;
+  flex-direction: column;
 }
 
 .display {
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 15px; /* Maggiore padding per un'area di visualizzazione più grande */
   border: 1px solid #000;
   border-radius: 5px;
   background-color: #f9f9f9;
-  font-size: 1.2em;
+  font-size: 1.5em; /* Aumenta la dimensione del font per una visualizzazione migliore */
+  overflow-y: auto; /* Abilita lo scroll verticale */
+  max-height: 400px; /* Imposta un'altezza massima più grande per il display */
 }
 
 .espressione {
@@ -241,7 +245,7 @@
 }
 
 .prodotti-selezionati th, .prodotti-selezionati td {
-  padding: 8px;
+  padding: 10px; /* Maggiore padding per le celle della tabella */
   border: 1px solid #ddd;
   text-align: center;
 }
@@ -261,12 +265,12 @@
 }
 
 .btn {
-  padding: 10px;
+  padding: 12px; /* Maggiore padding per i bottoni */
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #f0f0f0;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 1.2em; /* Maggiore dimensione del font per i bottoni */
 }
 
 .btn:active {
