--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -120,15 +120,15 @@
           <tbody>
             <tr *ngFor="let prodotto of prodottiSelezionati">
               <td>{{ prodotto.articolo.nome }}</td>
-              <td>€{{ prodotto.articolo.prezzo }}</td>
+              <td>€{{ prodotto.articolo.prezzo.toFixed(2) }}</td>
               <td>{{ prodotto.quantita }}</td>
-              <td>€{{ prodotto.articolo.prezzo * prodotto.quantita }}</td>
+              <td>€{{ (prodotto.articolo.prezzo * prodotto.quantita).toFixed(2) }}</td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
               <td colspan="3"><strong>Totale</strong></td>
-              <td>€{{ calcolaTotaleProdotti() }}</td>
+              <td>€{{ calcolaTotaleProdotti().toFixed(2) }}</td>
             </tr>
           </tfoot>
         </table>
@@ -168,9 +168,10 @@
 
     <!-- Display del resto -->
     <div class="resto-display">
-      Resto: <span id="resto">{{ resto || '0' }}</span>
+      Resto: <span id="resto">{{ resto.toFixed(2) || '0.00' }}</span>
     </div>
   </div>
+
 
 
 
