--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -64,7 +64,7 @@
         <ng-container *ngIf="tipologiaSelezionata; else mostraTuttiArticoli">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
             <div class="col" *ngFor="let articolo of articoliFiltrati[tipologiaSelezionata] || []"
-                 (click)="selezionaArticolo(articolo)">
+              (click)="selezionaArticolo(articolo)">
               <div class="articolo-card p-3 border">
                 <h6>{{ articolo.nome }}</h6>
                 <p>€{{ articolo.prezzo }}</p>
@@ -78,7 +78,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
             <ng-container *ngFor="let tipologia of tipologie">
               <div class="col" *ngFor="let articolo of articoliFiltrati[tipologia] || []"
-                   (click)="selezionaArticolo(articolo)">
+                (click)="selezionaArticolo(articolo)">
                 <div class="articolo-card p-3 border">
                   <h6>{{ articolo.nome }}</h6>
                   <p>€{{ articolo.prezzo }}</p>
@@ -102,36 +102,14 @@
   <div class="calcolatrice-container">
     <!-- Display principale della calcolatrice -->
     <div class="display">
-      <div class="totale-prodotti">
-        Totale Prodotti: €{{ calcolaTotaleProdotti() }}
+      <!-- Visualizzazione dell'espressione e risultato della calcolatrice -->
+      <div class="display-calcolatrice">
+        <div class="espressione">{{ espressione }}</div>
+        <div class="risultato">€{{ risultato.toFixed(2) }}</div>
       </div>
-      <!-- Tabella dei prodotti selezionati -->
-      <div class="prodotti-selezionati" *ngIf="prodottiSelezionati.length > 0">
-        <h5>Prodotti Selezionati:</h5>
-        <table>
-          <thead>
-            <tr>
-              <th>Nome</th>
-              <th>Prezzo</th>
-              <th>Quantità</th>
-              <th>Totale</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let prodotto of prodottiSelezionati">
-              <td>{{ prodotto.articolo.nome }}</td>
-              <td>€{{ prodotto.articolo.prezzo.toFixed(2) }}</td>
-              <td>{{ prodotto.quantita }}</td>
-              <td>€{{ (prodotto.articolo.prezzo * prodotto.quantita).toFixed(2) }}</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <td colspan="3"><strong>Totale</strong></td>
-              <td>€{{ calcolaTotaleProdotti().toFixed(2) }}</td>
-            </tr>
-          </tfoot>
-        </table>
+      <!-- Visualizzazione del totale dei prodotti -->
+      <div class="totale-prodotti">
+        Totale Prodotti: €{{ calcolaTotaleProdotti().toFixed(2) }}
       </div>
     </div>
 
@@ -150,6 +128,7 @@
       <button class="btn" (click)="aggiungiNumero('9')">9</button>
       <button class="btn" (click)="aggiungiOperazione('*')">x</button>
       <button class="btn" (click)="aggiungiNumero('0')">0</button>
+      <button class="btn" (click)="aggiungiNumero('.')">,</button>
       <button class="btn" (click)="aggiungiOperazione('/')">/</button>
       <button class="btn uguale" (click)="calcola()">=</button>
       <button class="btn reset" (click)="reset()">C</button>
@@ -162,7 +141,7 @@
     <!-- Sezione pagamento -->
     <div class="pagamento">
       <label for="pagaContanti">Contanti: </label>
-      <input type="number" id="pagaContanti" placeholder="Inserisci importo" [(ngModel)]="importoPagamento">
+      <input type="number" id="pagaContanti" placeholder="Inserisci importo" [(ngModel)]="importoPagamento" />
       <button class="btn" (click)="calcolaResto()">Calcola Resto</button>
     </div>
 
@@ -171,6 +150,8 @@
       Resto: <span id="resto">{{ resto.toFixed(2) || '0.00' }}</span>
     </div>
   </div>
+
+
 
 
 
